--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(Project3)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(Project3
-        src/utils/csv_reader.cpp
         src/algs/anomoly_sliding_window.cpp
-        src/algs/anomoly_heap.cpp)
+        src/algs/anomoly_heap.cpp
+        src/utils/rolling_stats.cpp
+        src/utils/csv_utils.cpp
+        src/main.cpp)
