--- a/Pipfile
+++ b/Pipfile
@@ -20,7 +20,6 @@ narwhals = "==1.35.0"
 nest-asyncio = "==1.6.0"
 numpy = "==2.2.4"
 packaging = "==24.2"
-pandas = "==2.2.3"
 plotly = "==6.0.1"
 pygame = "==2.6.1"
 python-dateutil = "==2.9.0.post0"
@@ -33,6 +32,9 @@ tzdata = "==2025.2"
 urllib3 = "==2.4.0"
 werkzeug = "==3.0.6"
 zipp = "==3.21.0"
+yfinance = "*"
+pandas = "*"
+matplotlib = "*"
 
 [dev-packages]
 
